# toxt-p10_dbdriver

./: .gitignore  DESCRITIVO.md  README.md  exemplo_sqlalchemy.py  pyproject.toml
app/: main.py
app/DbDriver/subclasses/: DbDriverUpdate.py  DbDriverUtils.py
src/pyEasyMatrixDb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyeasymatrixdb/: DbDriver.py  __init__.py
src/pyeasymatrixdb/subclasses/: DbDriverCore.py  DbDriverSearch.py  DbDriverUpdate.py  DbDriverUtils.py  __init__.py
test/: main.py
