[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyEasyDb"
version = "0.1.0"
description = "Easiest way to search and update a database using matrix like queries"
requires-python = ">=3.10"
dependencies = ["sqlalchemy>=2.0"]

[tool.setuptools]
packages = ["pyeasydb", "pyeasydb.subclasses"]

[tool.setuptools.package-dir]
"pyeasydb" = "app/DbDriver"
"pyeasydb.subclasses" = "app/DbDriver/subclasses"
